--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,8 +6,8 @@
   <meta name="description" content="">
   <meta name="keywords" content="">
   <meta name="author" content="elemis">
-  <title>AxOps Technology Services</title>
-  <link rel="shortcut icon" href="./assets/img/favicon.png">
+  <title>{{ site.title }}</title>
+  <link rel="shortcut icon" href="{{ site.favicon }}">
   <link rel="stylesheet" href="./assets/css/plugins.css">
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="preload" href="./assets/css/fonts/dm.css" as="style" onload="this.rel='stylesheet'">
