--- a/_includes/header_site.html
+++ b/_includes/header_site.html
@@ -3,7 +3,7 @@
       <div class="container flex-lg-row flex-nowrap align-items-center">
         <div class="navbar-brand w-100">
           <a href="./index.html">
-            <img src="./assets/img/logo.png" srcset="./assets/img/logo@2x.png 2x" alt="" />
+            <img src="{{ site.nav_logo }}" srcset="{{ site.nav_logo2x }}" alt="" />
           </a>
         </div>
         <div class="navbar-collapse offcanvas offcanvas-nav offcanvas-start">
