--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,6 +11,26 @@
   <link rel="stylesheet" href="./assets/css/plugins.css">
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="preload" href="./assets/css/fonts/dm.css" as="style" onload="this.rel='stylesheet'">
+
+  <!-- HTML Meta Tags -->
+  <title>{{ page.title }} | {{ site.title }}</title>
+  <meta name="description" content="{{ page.description }}">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="{{ site.baseurl | append: page.permalink }}">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="{{ page.title }}">
+  <meta property="og:description" content="{{ page.description }}">
+  <meta property="og:image" content="{{ page.og_image_url }}">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="{{ site.baseurl | split: '//' | last | split: '/' | first }}">
+  <meta property="twitter:url" content="{{ site.baseurl | append: page.permalink }}">
+  <meta name="twitter:title" content="{{ page.title }}">
+  <meta name="twitter:description" content="{{ page.description }}">
+  <meta name="twitter:image" content="{{ page.og_image_url }}">
+        
 </head>
 
 <body>
