--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,14 +3,11 @@
       <div class="row gy-6 gy-lg-0">
         <div class="col-md-4 col-lg-3">
           <div class="widget">
-            <img class="mb-4" src="./assets/img/logo-light.png" srcset="./assets/img/logo-light@2x.png 2x" alt="" />
-            <p class="mb-4">© 2022 Sandbox. <br class="d-none d-lg-block" />All rights reserved.</p>
+            <img class="mb-4" src="{{ site.nav_logo }}" srcset="{{ site.nav_logo2x }}" alt="" />
+            <p class="mb-4">© {{ site.time | date: "%Y" }}. All Rights Reserved.</p>
             <nav class="nav social social-white">
-              <a href="#"><i class="uil uil-twitter"></i></a>
-              <a href="#"><i class="uil uil-facebook-f"></i></a>
-              <a href="#"><i class="uil uil-dribbble"></i></a>
-              <a href="#"><i class="uil uil-instagram"></i></a>
-              <a href="#"><i class="uil uil-youtube"></i></a>
+              <a href="#"><i class="uil uil-linkedin"></i></a>
+              <!-- <a href="#"><i class="uil uil-youtube"></i></a> -->
             </nav>
             <!-- /.social -->
           </div>
@@ -20,8 +17,8 @@
         <div class="col-md-4 col-lg-3">
           <div class="widget">
             <h4 class="widget-title text-white mb-3">Get in Touch</h4>
-            <address class="pe-xl-15 pe-xxl-17">Moonshine St. 14/05 Light City, London, United Kingdom</address>
-            <a href="mailto:#">info@email.com</a><br /> 00 (123) 456 78 90
+            <address class="pe-xl-15 pe-xxl-17"></address>
+            <a href="mailto:#">Contact us any time of day, any day, over at <strong>holler@axops.tech</strong>. Looking forward to hearing from you!</a>
           </div>
           <!-- /.widget -->
         </div>
