added mobile responsive menu elements

--- a/_includes/header_site.html
+++ b/_includes/header_site.html
@@ -113,6 +113,15 @@
           <!-- /.offcanvas-body -->
         </div>
         <!-- /.navbar-collapse -->
+        <div class="navbar-other ms-lg-4">
+          <ul class="navbar-nav flex-row align-items-center ms-auto">
+            <li class="nav-item d-lg-none">
+              <button class="hamburger offcanvas-nav-btn"><span></span></button>
+            </li>
+          </ul>
+          <!-- /.navbar-nav -->
+        </div>
+        <!-- /.navbar-other -->
         </div>
         <!-- /.navbar-other -->
       </div>
