updated includes and markdown to fix path errors

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,9 +8,9 @@
   <meta name="author" content="elemis">
   <title>{{ site.title }}</title>
   <link rel="shortcut icon" href="{{ site.favicon }}">
-  <link rel="stylesheet" href="./assets/css/plugins.css">
-  <link rel="stylesheet" href="./assets/css/style.css">
-  <link rel="preload" href="./assets/css/fonts/dm.css" as="style" onload="this.rel='stylesheet'">
+  <link rel="stylesheet" href="{{ site.url }}/assets/css/plugins.css">
+  <link rel="stylesheet" href="{{ site.url }}/assets/css/style.css">
+  <link rel="preload" href="{{ site.url }}/assets/css/fonts/dm.css" as="style" onload="this.rel='stylesheet'">
 
   <!-- HTML Meta Tags -->
   <title>{{ page.title }} | {{ site.title }}</title>
