--- a/_includes/header_site.html
+++ b/_includes/header_site.html
@@ -5,8 +5,8 @@
     <nav class="navbar navbar-expand-lg classic transparent navbar-light">
       <div class="container flex-lg-row flex-nowrap align-items-center">
         <div class="navbar-brand w-100">
-          <a href="{{ site.baseurl }}">
-            <img src="{{ site.nav_logo }}" srcset="{{ site.nav_logo2x }}" alt="" />
+          <a href="{{ site.url }}">
+            <img src="{{ site.url | append: site.nav_logo }}" srcset="{{ site.url | append: site.nav_logo2x }}" alt="" />
           </a>
         </div>
         <div class="navbar-collapse offcanvas offcanvas-nav offcanvas-start">
