--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
       <div class="row gy-6 gy-lg-0">
         <div class="col-md-4 col-lg-3">
           <div class="widget">
-            <img class="mb-4" src="{{ site.nav_logo }}" srcset="{{ site.nav_logo2x }}" alt="" />
+            <img class="mb-4" src="{{ site.url | append: site.nav_logo }}" srcset="{{ site.url | append: site.nav_logo2x }}" alt="" />
             <p class="mb-4">© {{ site.time | date: "%Y" }}. All Rights Reserved.</p>
             <nav class="nav social social-white">
               <a href="#"><i class="uil uil-linkedin"></i></a>
@@ -77,8 +77,8 @@
       <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
     </svg>
   </div>
-  <script src="./assets/js/plugins.js"></script>
-  <script src="./assets/js/theme.js"></script>
+  <script src="{{ site.url }}/assets/js/plugins.js"></script>
+  <script src="{{ site.url }}/assets/js/theme.js"></script>
 </body>
 
 </html>
