--- a/_includes/header_site.html
+++ b/_includes/header_site.html
@@ -26,6 +26,7 @@
                         <div class="row gx-0 gx-lg-3">
                           {% for subitem in item.children %}
                           {% if subitem.enabled %}
+                          {% assign item_url = item.url | append: subitem.url %}
                           <div class="col-lg-3">
                             <h6 class="dropdown-header">{{ subitem.name }}</h6>
                             <ul class="list-unstyled">
