--- a/_includes/header_site.html
+++ b/_includes/header_site.html
@@ -104,7 +104,7 @@
                   </li>
                   {% else %}
                   <li class="nav-item">
-                    <a class="nav-link" href="{{ item.url }}" data-bs-toggle="dropdown">{{ item.name }}</a>
+                    <a class="nav-link" href="{{ item.url }}">{{ item.name }}</a>
                   </li>
                   {% endif %}
                 {% endif %}
