--- a/_layouts/solution.html
+++ b/_layouts/solution.html
@@ -8,58 +8,55 @@
 
 <div class="content-wrapper">
     <!-- .content-wrapper -->
-    <section class="wrapper bg-light">
-        <div class="container py-14 py-md-16">
-        <div class="row gx-lg-8 gx-xl-12 gy-10 align-items-center">
-            <div class="col-md-8 col-lg-6 col-xl-5 order-lg-2 position-relative">
-            <div class="shape bg-soft-primary rounded-circle rellax w-20 h-20" data-rellax-speed="1" style="top: -2rem; right: -1.9rem;"></div>
-            <figure class="rounded"><img src="{{ site.url | append: pageconfig.main_image_src }}" srcset="{{ site.url | append: pageconfig.main_image_srcset }}" alt=""></figure>
+    <section class="wrapper bg-light wrapper-border">
+        <div class="container py-14 py-md-12">
+          <div class="row text-center">
+            <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
+              <h2 class="fs-15 text-uppercase text-muted mb-3">{{ pageconfig.title }}</h2>
+              <h3 class="display-4 mb-9 px-xl-11">{{ pageconfig.tagline }}</h3>
+            </div>
+            <!-- /column -->
+          </div>
+          <!-- /.row -->
+          <div class="row gx-lg-8 gx-xl-12 gy-8">
+            {% for outcome in pageconfig.desired_outcomes %}
+            <div class="col-md-6 col-lg-4">
+              <div class="d-flex flex-row">
+                <div>
+                  <img src="{{ site.url }}{{ outcome.image }}" class="svg-inject icon-svg icon-svg-sm text-aqua me-4" alt="" />
+                </div>
+                <div>
+                  <h4 class="mb-1">{{ outcome.title }}</h4>
+                  <p class="mb-0">{{ outcome.description }}</p>
+                </div>
+              </div>
             </div>
             <!--/column -->
-            <div class="col-lg-6">
-            <h2 class="display-4 mb-3">{{ pageconfig.title }}</h2>
-            <p class="lead fs-lg">{{ pageconfig.tagline }}</p>
-            <p class="mb-6">{{ pageconfig.description }}</p>
-            <div class="row gx-xl-10 gy-6">
-                <div class="col-md-6">
-                <div class="d-flex flex-row">
-                    <div>
-                    <img src="{{ site.url }}/assets/img/icons/lineal/target.svg" class="svg-inject icon-svg icon-svg-sm me-4" alt="" />
-                    </div>
-                    <div>
-                    <h4 class="mb-1">Our Mission</h4>
-                    <p class="mb-0">Dapibus eu leo quam ornare curabitur blandit tempus.</p>
-                    </div>
-                </div>
-                </div>
-                <!--/column -->
-                <div class="col-md-6">
-                <div class="d-flex flex-row">
-                    <div>
-                    <img src="{{ site.url }}/assets/img/icons/lineal/award-2.svg" class="svg-inject icon-svg icon-svg-sm me-4" alt="" />
-                    </div>
-                    <div>
-                    <h4 class="mb-1">Our Values</h4>
-                    <p class="mb-0">Aenean lacinia bibendum nulla sed consectetur.</p>
-                    </div>
-                </div>
-                </div>
-                <!--/column -->
-            </div>
-            <!--/.row -->
-            </div>
-            <!--/column -->
-        </div>
-        <!--/.row -->
+            {% endfor %}
+          </div>
+          <!--/.row -->
         </div>
         <!-- /.container -->
     </section>
     <!-- /section -->
+    <section class="wrapper bg-light wrapper-border">
+        <div class="container py-14 py-md-8">
+          <div class="row mt-8 mt-md-12">
+            <div class="col-md-10 offset-md-1 text-justify">
+              <h2 class="display-4 mb-9 px-xl-11 text-center">Working with the AxOps&#8482; Team</h2>
+              {{ pageconfig.pitch }}
+            </div>
+            <!-- /column -->
+          </div>
+          <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- /section -->
+    {% include contact-form.html %}
 </div>
 <!-- /.content-wrapper -->
 
-{{ content }}
-  
 <!-- Footer -->
 {% include footer.html %}
 <!-- /footer -->
