--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -7,7 +7,7 @@
         <div class="col-xl-10 mx-auto">
           <div class="row gy-10 gx-lg-8 gx-xl-12">
             <div class="col-lg-8">
-              <form class="contact-form needs-validation" method="post" action="./assets/php/contact.php" novalidate>
+              <form class="contact-form needs-validation" method="post" action="#" novalidate>
                 <div class="messages"></div>
                 <div class="row gx-4">
                   <div class="col-md-6">
@@ -109,16 +109,7 @@
                 </div>
                 <div>
                   <h5 class="mb-1">Address</h5>
-                  <address>Moonshine St. 14/05 Light City, London, United Kingdom</address>
-                </div>
-              </div>
-              <div class="d-flex flex-row">
-                <div>
-                  <div class="icon text-primary fs-28 me-4 mt-n1"> <i class="uil uil-phone-volume"></i> </div>
-                </div>
-                <div>
-                  <h5 class="mb-1">Phone</h5>
-                  <p>00 (123) 456 78 90 <br />00 (987) 654 32 10</p>
+                  <address>{{ site.address }}</address>
                 </div>
               </div>
               <div class="d-flex flex-row">
@@ -127,8 +118,7 @@
                 </div>
                 <div>
                   <h5 class="mb-1">E-mail</h5>
-                  <p class="mb-0"><a href="mailto:sandbox@email.com" class="text-body">sandbox@email.com</a></p>
-                  <p><a href="mailto:help@sandbox.com" class="text-body">help@sandbox.com</a></p>
+                  <p class="mb-0"><a href="mailto:{{ site.email }}" class="text-body">{{ site.email }}</a></p>
                 </div>
               </div>
             </div>
