--- a/_layouts/solution.html
+++ b/_layouts/solution.html
@@ -40,10 +40,78 @@
     </section>
     <!-- /section -->
     <section class="wrapper bg-light wrapper-border">
+        <div class="container py-14 py-md-12">
+          <div class="row text-center">
+            <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
+              <h3 class="display-4 mb-9 px-xl-11">Common <span class="underline-3 style-2 red">Obstacles</span> to Adoption</h3>
+            </div>
+            <!-- /column -->
+          </div>
+          <!-- /.row -->
+          <div class="row gx-lg-8 gx-xl-12 gy-8">
+            {% for obstacle in pageconfig.common_obstacles %}
+            <div class="col-md-6 col-lg-4">
+              <div class="d-flex flex-row">
+                <div>
+                  <img src="{{ site.url }}{{ obstacle.image }}" class="svg-inject icon-svg icon-svg-sm text-aqua me-4" alt="" />
+                </div>
+                <div>
+                  <h4 class="mb-1">{{ obstacle.title }}</h4>
+                  <p class="mb-0">{{ obstacle.description }}</p>
+                </div>
+              </div>
+            </div>
+            <!--/column -->
+            {% endfor %}
+          </div>
+          <!--/.row -->
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- /section -->
+    <section class="wrapper bg-light wrapper-border">
+        <div class="container py-14 py-md-12">
+          <h2 class="display-4 mb-3 text-center">Why choose {{ site.data.content.config.name }} as your {{ pageconfig.title }} partner? &#129309;</h2>
+          <p class="lead text-center mb-10 px-md-16 px-lg-0">We have extensive experience resolving the above and more, having worked with clients across many different industries. We pride ourselves in being able to help you both <span class="underline-3 style-2 yellow">navigate</span> <strong>and</strong> <span class="underline-3 style-2 blue">overcome</span> adoption challenges <span class="underline-3 style-2 green">cost-effectively</span> 🎯</p>
+          <div class="row">
+            <div style="margin: 0 auto;" class="col-lg-9 mb-0">
+              <div id="accordion-1" class="accordion-wrapper">
+                {% for ovp in pageconfig.outcomes_vs_painpoints %}
+                <div class="card accordion-item">
+                  <div class="card-header" id="accordion-heading-1-{{ ovp.priority }}">
+                    <button class="collapsed" data-bs-toggle="collapse" data-bs-target="#accordion-collapse-1-{{ ovp.priority }}" aria-expanded="false" aria-controls="accordion-collapse-1-{{ ovp.priority }}">Idealised Goal: {{ ovp.outcome }}</button>
+                  </div>
+                  <!-- /.card-header -->
+                  <div id="accordion-collapse-1-{{ ovp.priority }}" class="collapse" aria-labelledby="accordion-heading-1-{{ ovp.priority }}" data-bs-target="#accordion-1">
+                    <div class="card-body">
+                        <p><strong>Obstacles to overcome in pursuit of this goal:</strong></p>
+                        <ul>
+                            {% for pp in ovp.painpoints %}
+                            <li>{{ pp }}</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                    <!-- /.card-body -->
+                  </div>
+                  <!-- /.collapse -->
+                </div>
+                <!-- /.card -->
+                {% endfor %}
+              </div>
+              <!-- /.accordion-wrapper -->
+            </div>
+            <!--/column -->
+          </div>
+          <!--/.row -->
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- /section -->
+    <section class="wrapper bg-light wrapper-border">
         <div class="container py-14 py-md-8">
           <div class="row mt-8 mt-md-12">
             <div class="col-md-10 offset-md-1 text-justify">
-              <h2 class="display-4 mb-9 px-xl-11 text-center">Working with the AxOps&#8482; Team</h2>
+              <h2 class="display-4 mb-9 px-xl-11 text-center"><span class="underline-3 style-2 green">Next Steps</span>: Working with the {{ site.data.content.config.name }} Team! &#128588;</h2>
               {{ pageconfig.pitch }}
             </div>
             <!-- /column -->
