updated obstacle section icons and text

--- a/_layouts/solution.html
+++ b/_layouts/solution.html
@@ -111,7 +111,7 @@
         <div class="container py-14 py-md-8">
           <div class="row mt-8 mt-md-12">
             <div class="col-md-10 offset-md-1 text-justify">
-              <h2 class="display-4 mb-9 px-xl-11 text-center"><span class="underline-3 style-2 green">Next Steps</span>: Working with the {{ site.data.content.config.name }} Team! &#128588;</h2>
+              <h2 class="display-4 mb-9 px-xl-11 text-center"><span class="underline-3 style-2 green">The Solution</span>: Partnering with the {{ site.data.content.config.name }} Team! &#128588;</h2>
               {{ pageconfig.pitch }}
             </div>
             <!-- /column -->
