added project management workflow creatives

--- a/_layouts/solution.html
+++ b/_layouts/solution.html
@@ -121,6 +121,7 @@
         <!-- /.container -->
     </section>
     <!-- /section -->
+    {% include solution-process.html %}
     {% include contact-form.html %}
 </div>
 <!-- /.content-wrapper -->
