removed redundant image refs

--- a/_layouts/solution.html
+++ b/_layouts/solution.html
@@ -23,7 +23,7 @@
             <div class="col-md-6 col-lg-4">
               <div class="d-flex flex-row">
                 <div>
-                  <img src="{{ site.url }}{{ outcome.image }}" class="svg-inject icon-svg icon-svg-sm text-aqua me-4" alt="" />
+                  <img src="{{ site.url }}{{ pageconfig.outcome_image }}" class="svg-inject icon-svg icon-svg-sm text-aqua me-4" alt="" />
                 </div>
                 <div>
                   <h4 class="mb-1">{{ outcome.category }}</h4>
@@ -53,7 +53,7 @@
             <div class="col-md-6 col-lg-4">
               <div class="d-flex flex-row">
                 <div>
-                  <img src="{{ site.url }}{{ obstacle.image }}" class="svg-inject icon-svg icon-svg-sm text-aqua me-4" alt="" />
+                  <img src="{{ site.url }}{{ pageconfig.obstacle_image }}" class="svg-inject icon-svg icon-svg-sm text-aqua me-4" alt="" />
                 </div>
                 <div>
                   <h4 class="mb-1">{{ obstacle.category }}</h4>
