--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="{{ page.title }}">
   <meta property="og:description" content="{{ page.description }}">
-  <meta property="og:image" content="{{ page.og_image_url }}">
+  <meta property="og:image" content="{{ site.url | append: page.og_image_url }}">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
@@ -29,7 +29,7 @@
   <meta property="twitter:url" content="{{ site.baseurl | append: page.permalink }}">
   <meta name="twitter:title" content="{{ page.title }}">
   <meta name="twitter:description" content="{{ page.description }}">
-  <meta name="twitter:image" content="{{ page.og_image_url }}">
+  <meta name="twitter:image" content="{{ site.url | append: page.og_image_url }}">
         
 </head>
 
