updated crm data integrations creatives in yaml

--- a/_layouts/solution.html
+++ b/_layouts/solution.html
@@ -84,7 +84,7 @@
                   <!-- /.card-header -->
                   <div id="accordion-collapse-1-{{ ovp.priority }}" class="collapse" aria-labelledby="accordion-heading-1-{{ ovp.priority }}" data-bs-target="#accordion-1">
                     <div class="card-body">
-                        <p><strong>Obstacles to overcome in pursuit of this goal:</strong></p>
+                        <p><strong>Obstacles to overcome:</strong></p>
                         <ul>
                             {% for pp in ovp.painpoints %}
                             <li>{{ pp }}</li>
