initialised creatives for technologies yaml

--- a/_layouts/technology.html
+++ b/_layouts/technology.html
@@ -10,44 +10,66 @@
     <!-- .content-wrapper -->
     <section class="wrapper bg-light">
       <div class="container py-14 py-md-16">
-        <div class="row gx-lg-8 gx-xl-12 gy-6 px-xl-5">
-          <div class="col-lg-4">
-            <div class="d-flex flex-row">
-              <div>
-                <div class="icon btn btn-circle pe-none btn-primary me-4"> <i class="uil uil-phone-volume"></i> </div>
-              </div>
-              <div>
-                <h4>24/7 Support</h4>
-                <p class="mb-2">Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget. Fusce dapibus tellus.</p>
-                <a href="#" class="more hover">Learn More</a>
-              </div>
-            </div>
+        <div class="row gx-lg-8 gx-xl-12 gy-10 mb-14 mb-md-18 align-items-center">
+          <div class="col-lg-6 order-lg-2 position-relative">
+            <div class="shape bg-line blue rounded-circle rellax w-17 h-17" data-rellax-speed="1" style="top: -2rem; right: -0.6rem;"></div>
+            <div class="shape bg-line blue rounded-circle rellax w-17 h-17" data-rellax-speed="1" style="bottom: -2rem; left: -0.4rem;"></div>
+            <figure class="rounded mb-0"><img src="{{ site.url }}/assets/img/illustrations/custom/cloud-engineering.jpg" srcset="./assets/img/photos/se3@2x.jpg 2x" alt=""></figure>
           </div>
           <!--/column -->
-          <div class="col-lg-4">
-            <div class="d-flex flex-row">
-              <div>
-                <div class="icon btn btn-circle pe-none btn-primary me-4"> <i class="uil uil-laptop-cloud"></i> </div>
+          <div class="col-lg-6">
+            <h3 class="display-4 mb-4">Package Design</h3>
+            <p class="mb-5">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas faucibus mollis interdum. Maecenas sed diam eget risus varius.</p>
+            <div class="row gy-3">
+              <div class="col-xl-6">
+                <ul class="icon-list bullet-bg bullet-soft-leaf mb-0">
+                  <li><span><i class="uil uil-check"></i></span><span>Aenean quam ornare curabitur blandit consectetur.</span></li>
+                  <li class="mt-3"><span><i class="uil uil-check"></i></span><span>Nullam quis risus eget urna mollis ornare aenean leo.</span></li>
+                </ul>
               </div>
-              <div>
-                <h4>Daily Updates</h4>
-                <p class="mb-2">Maecenas faucibus mollis interdum. Vivamus sagittis lacus vel augue laoreet. Sed posuere consectetur.</p>
-                <a href="#" class="more hover">Learn More</a>
+              <!--/column -->
+              <div class="col-xl-6">
+                <ul class="icon-list bullet-bg bullet-soft-leaf mb-0">
+                  <li><span><i class="uil uil-check"></i></span><span>Etiam porta euismod malesuada mollis nisl ornare sem.</span></li>
+                  <li class="mt-3"><span><i class="uil uil-check"></i></span><span>Vivamus sagittis lacus augue rutrum maecenas.</span></li>
+                </ul>
               </div>
+              <!--/column -->
             </div>
+            <!--/.row -->
+            <a href="#" class="btn btn-soft-leaf rounded-pill mt-6 mb-0">More Details</a>
           </div>
           <!--/column -->
-          <div class="col-lg-4">
-            <div class="d-flex flex-row">
-              <div>
-                <div class="icon btn btn-circle pe-none btn-primary me-4"> <i class="uil uil-chart-line"></i> </div>
+        </div>
+        <!--/.row -->
+        <div class="row gx-lg-8 gx-xl-12 gy-10 mb-14 mb-md-18 align-items-center">
+          <div class="col-lg-6 position-relative">
+            <div class="shape bg-line blue rounded-circle rellax w-17 h-17" data-rellax-speed="1" style="top: -2rem; right: -0.6rem;"></div>
+            <div class="shape bg-line blue rounded-circle rellax w-17 h-17" data-rellax-speed="1" style="bottom: -2rem; left: -0.4rem;"></div>
+            <figure class="rounded mb-0"><img src="{{ site.url }}/assets/img/illustrations/custom/saas-development.jpg" srcset="./assets/img/photos/se3@2x.jpg 2x" alt=""></figure>
+          </div>
+          <!--/column -->
+          <div class="col-lg-6">
+            <h3 class="display-4 mb-4">Package Design</h3>
+            <p class="mb-5">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas faucibus mollis interdum. Maecenas sed diam eget risus varius.</p>
+            <div class="row gy-3">
+              <div class="col-xl-6">
+                <ul class="icon-list bullet-bg bullet-soft-leaf mb-0">
+                  <li><span><i class="uil uil-check"></i></span><span>Aenean quam ornare curabitur blandit consectetur.</span></li>
+                  <li class="mt-3"><span><i class="uil uil-check"></i></span><span>Nullam quis risus eget urna mollis ornare aenean leo.</span></li>
+                </ul>
               </div>
-              <div>
-                <h4>Market Research</h4>
-                <p class="mb-2">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus magna scelerisque.</p>
-                <a href="#" class="more hover">Learn More</a>
+              <!--/column -->
+              <div class="col-xl-6">
+                <ul class="icon-list bullet-bg bullet-soft-leaf mb-0">
+                  <li><span><i class="uil uil-check"></i></span><span>Etiam porta euismod malesuada mollis nisl ornare sem.</span></li>
+                  <li class="mt-3"><span><i class="uil uil-check"></i></span><span>Vivamus sagittis lacus augue rutrum maecenas.</span></li>
+                </ul>
               </div>
+              <!--/column -->
             </div>
+            <!--/.row -->
+            <a href="#" class="btn btn-soft-leaf rounded-pill mt-6 mb-0">More Details</a>
           </div>
           <!--/column -->
         </div>
