--- a/_layouts/technology.html
+++ b/_layouts/technology.html
@@ -8,179 +8,65 @@
 
 <div class="content-wrapper">
     <!-- .content-wrapper -->
-    <section class="wrapper bg-light">
+    <section class="wrapper bg-light wrapper-border">
       <div class="container py-14 py-md-16">
+        <div class="row text-center">
+          <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
+            <h2 class="fs-15 text-uppercase text-muted mb-3">{{ pageconfig.title }}</h2>
+            <h3 class="display-4 mb-9 px-xl-11">{{ pageconfig.tagline }}</h3>
+            <h2 class="fs-15 text-uppercase text-muted mb-12">{{ pageconfig.outro }}</h2>
+            <hr />
+          </div>
+          <!-- /column -->
+        </div>
+        <!-- /.row -->
+        {% assign loc = "right" %}
+        {% for p in pageconfig.programmes %}
+        <a name="#{{ p[0] }}" style="visibility: hidden;"></a>
         <div class="row gx-lg-8 gx-xl-12 gy-10 mb-14 mb-md-18 align-items-center">
+          {% if loc == "right" %}
           <div class="col-lg-6 order-lg-2 position-relative">
-            <div class="shape bg-line blue rounded-circle rellax w-17 h-17" data-rellax-speed="1" style="top: -2rem; right: -0.6rem;"></div>
-            <div class="shape bg-line blue rounded-circle rellax w-17 h-17" data-rellax-speed="1" style="bottom: -2rem; left: -0.4rem;"></div>
-            <figure class="rounded mb-0"><img src="{{ site.url }}/assets/img/illustrations/custom/full-stack-software-development.jpg" srcset="./assets/img/photos/se3@2x.jpg 2x" alt=""></figure>
-          </div>
-          <!--/column -->
-          <div class="col-lg-6">
-            <h3 class="display-4 mb-4">Package Design</h3>
-            <p class="mb-5">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas faucibus mollis interdum. Maecenas sed diam eget risus varius.</p>
-            <div class="row gy-3">
-              <div class="col-xl-6">
-                <ul class="icon-list bullet-bg bullet-soft-leaf mb-0">
-                  <li><span><i class="uil uil-check"></i></span><span>Aenean quam ornare curabitur blandit consectetur.</span></li>
-                  <li class="mt-3"><span><i class="uil uil-check"></i></span><span>Nullam quis risus eget urna mollis ornare aenean leo.</span></li>
-                </ul>
-              </div>
-              <!--/column -->
-              <div class="col-xl-6">
-                <ul class="icon-list bullet-bg bullet-soft-leaf mb-0">
-                  <li><span><i class="uil uil-check"></i></span><span>Etiam porta euismod malesuada mollis nisl ornare sem.</span></li>
-                  <li class="mt-3"><span><i class="uil uil-check"></i></span><span>Vivamus sagittis lacus augue rutrum maecenas.</span></li>
-                </ul>
-              </div>
-              <!--/column -->
-            </div>
-            <!--/.row -->
-            <a href="#" class="btn btn-soft-leaf rounded-pill mt-6 mb-0">More Details</a>
-          </div>
-          <!--/column -->
-        </div>
-        <!--/.row -->
-        <div class="row gx-lg-8 gx-xl-12 gy-10 mb-14 mb-md-18 align-items-center">
+          {% else %}
           <div class="col-lg-6 position-relative">
+          {% endif %}
             <div class="shape bg-line blue rounded-circle rellax w-17 h-17" data-rellax-speed="1" style="top: -2rem; right: -0.6rem;"></div>
             <div class="shape bg-line blue rounded-circle rellax w-17 h-17" data-rellax-speed="1" style="bottom: -2rem; left: -0.4rem;"></div>
-            <figure class="rounded mb-0"><img src="{{ site.url }}/assets/img/illustrations/custom/saas-development.jpg" srcset="./assets/img/photos/se3@2x.jpg 2x" alt=""></figure>
+            <figure class="rounded mb-0"><img src="{{ site.url }}/assets/img/illustrations/custom/{{ p[0] }}.jpg" srcset="{{ site.url }}/assets/img/illustrations/custom/{{ p[0] }}.jpg 2x" alt=""></figure>
           </div>
           <!--/column -->
           <div class="col-lg-6">
-            <h3 class="display-4 mb-4">Package Design</h3>
-            <p class="mb-5">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas faucibus mollis interdum. Maecenas sed diam eget risus varius.</p>
+            <h3 class="display-4 mb-4">{{ p[1].title }}</h3>
+            <p class="mb-5" align="justify">{{ p[1].description }}</p>
             <div class="row gy-3">
               <div class="col-xl-6">
-                <ul class="icon-list bullet-bg bullet-soft-leaf mb-0">
-                  <li><span><i class="uil uil-check"></i></span><span>Aenean quam ornare curabitur blandit consectetur.</span></li>
-                  <li class="mt-3"><span><i class="uil uil-check"></i></span><span>Nullam quis risus eget urna mollis ornare aenean leo.</span></li>
+                <ul class="icon-list bullet-bg bullet-primary mb-0">
+                  <li class="mt-3"><span><i class="uil uil-check"></i></span><span>{{ p[1].benefits[0] }}</span></li>
+                  <li class="mt-3"><span><i class="uil uil-check"></i></span><span>{{ p[1].benefits[1] }}</span></li>
                 </ul>
               </div>
               <!--/column -->
               <div class="col-xl-6">
-                <ul class="icon-list bullet-bg bullet-soft-leaf mb-0">
-                  <li><span><i class="uil uil-check"></i></span><span>Etiam porta euismod malesuada mollis nisl ornare sem.</span></li>
-                  <li class="mt-3"><span><i class="uil uil-check"></i></span><span>Vivamus sagittis lacus augue rutrum maecenas.</span></li>
+                <ul class="icon-list bullet-bg bullet-primary mb-0">
+                  <li class="mt-3"><span><i class="uil uil-check"></i></span><span>{{ p[1].benefits[2] }}</span></li>
+                  <li class="mt-3"><span><i class="uil uil-check"></i></span><span>{{ p[1].benefits[3] }}</span></li>
                 </ul>
               </div>
               <!--/column -->
             </div>
             <!--/.row -->
-            <a href="#" class="btn btn-soft-leaf rounded-pill mt-6 mb-0">More Details</a>
+            <a href="#" class="btn btn-primary rounded-pill mt-6 mb-0">Need {{ p[1].title }} Support? Get In Touch!</a>
           </div>
           <!--/column -->
         </div>
         <!--/.row -->
+        {% if loc == "right" %}
+          {% assign loc = "left" %}
+        {% else %}
+          {% assign loc = "right" %}
+        {% endif %}
+        {% endfor %}
       </div>
       <!-- /.container -->
-    </section>
-    <!-- /section -->
-    <section class="wrapper bg-light wrapper-border">
-        <div class="container py-14 py-md-12">
-          <div class="row text-center">
-            <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-              <h2 class="fs-15 text-uppercase text-muted mb-3">{{ pageconfig.title }}</h2>
-              <h3 class="display-4 mb-9 px-xl-11">{{ pageconfig.tagline }}</h3>
-            </div>
-            <!-- /column -->
-          </div>
-          <!-- /.row -->
-          <div class="row gx-lg-8 gx-xl-12 gy-8">
-            {% for outcome in pageconfig.desired_outcomes %}
-            <div class="col-md-6 col-lg-4">
-              <div class="d-flex flex-row">
-                <div>
-                  <img src="{{ site.url }}{{ pageconfig.outcome_image }}" class="svg-inject icon-svg icon-svg-sm text-aqua me-4" alt="" />
-                </div>
-                <div>
-                  <h4 class="mb-1">{{ outcome.category }}</h4>
-                  <p class="mb-0">{{ outcome.description }}</p>
-                </div>
-              </div>
-            </div>
-            <!--/column -->
-            {% endfor %}
-          </div>
-          <!--/.row -->
-        </div>
-        <!-- /.container -->
-    </section>
-    <!-- /section -->
-    <section class="wrapper bg-light wrapper-border">
-        <div class="container py-14 py-md-12">
-          <h2 class="display-4 mb-3 text-center">Why choose {{ site.data.content.config.name }} as your {{ pageconfig.title }} partner? &#129309;</h2>
-          <p class="lead text-center mb-10 px-md-16 px-lg-0">We leverage our experience in the industry to help you you both <span class="underline-3 style-2 yellow">navigate</span> <strong>and</strong> <span class="underline-3 style-2 blue">overcome</span> challenges <span class="underline-3 style-2 green">cost-effectively</span> 🎯</p>
-          <div class="row text-center">
-            <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-              <h3 class="display-6 mb-9 px-xl-11">Clients often experience the following <span class="underline-3 style-2 red">problems</span>:</h3>
-            </div>
-            <!-- /column -->
-          </div>
-          <!-- /.row -->
-          <div class="row gx-lg-8 gx-xl-12 gy-8">
-            {% for obstacle in pageconfig.common_obstacles %}
-            <div class="col-md-6 col-lg-4">
-              <div class="d-flex flex-row">
-                <div>
-                  <img src="{{ site.url }}{{ pageconfig.obstacle_image }}" class="svg-inject icon-svg icon-svg-sm text-aqua me-4" alt="" />
-                </div>
-                <div>
-                  <h4 class="mb-1">{{ obstacle.category }}</h4>
-                  <p class="mb-0">{{ obstacle.description }}</p>
-                </div>
-              </div>
-            </div>
-            <!--/column -->
-            {% endfor %}
-          </div>
-          <!--/.row -->
-          <div class="row">
-            <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2 text-center">
-              <br /><br />
-              <h3 class="display-6 mb-9 px-xl-11">We're <span class="underline">our own clients</span> first, intimately familiar with <span class="underline-3 style-2 blue">idealised</span> goals and their respective <span class="underline-3 style-2 yellow">challenges</span> &#128161;</h3>
-            </div>
-            <div style="margin: 0 auto;" class="col-lg-9 mb-0">
-              <div id="accordion-1" class="accordion-wrapper">
-                {% for ovp in pageconfig.outcomes_vs_painpoints %}
-                <div class="card accordion-item">
-                  <div class="card-header" id="accordion-heading-1-{{ ovp.priority }}">
-                    <button class="collapsed" data-bs-toggle="collapse" data-bs-target="#accordion-collapse-1-{{ ovp.priority }}" aria-expanded="false" aria-controls="accordion-collapse-1-{{ ovp.priority }}">Idealised Goal: {{ ovp.category }}</button>
-                  </div>
-                  <!-- /.card-header -->
-                  <div id="accordion-collapse-1-{{ ovp.priority }}" class="collapse" aria-labelledby="accordion-heading-1-{{ ovp.priority }}" data-bs-target="#accordion-1">
-                    <div class="card-body">
-                        <p><strong>Obstacles to overcome:</strong></p>
-                        <ul>
-                            {% for pp in ovp.painpoints %}
-                            <li>{{ pp }}</li>
-                            {% endfor %}
-                        </ul>
-                    </div>
-                    <!-- /.card-body -->
-                  </div>
-                  <!-- /.collapse -->
-                </div>
-                <!-- /.card -->
-                {% endfor %}
-              </div>
-              <!-- /.accordion-wrapper -->
-            </div>
-            <!--/column -->
-          </div>
-          <!--/.row -->
-          <div class="row mt-8 mt-md-12">
-            <div class="col-md-10 offset-md-1 text-justify">
-              <h2 class="display-4 mb-9 px-xl-11 text-center"><span class="underline-3 style-2 green">Your Solution</span>: Partnering with the {{ site.data.content.config.name }} Team! &#128588;</h2>
-              {{ pageconfig.pitch }}
-            </div>
-            <!-- /column -->
-          </div>
-          <!-- /.row -->
-        </div>
-        <!-- /.container -->
     </section>
     <!-- /section -->
     {% include solution-process.html %}
