--- a/_layouts/technology.html
+++ b/_layouts/technology.html
@@ -14,7 +14,7 @@
           <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
             <h2 class="fs-15 text-uppercase text-muted mb-3">{{ pageconfig.title }}</h2>
             <h3 class="display-4 mb-9 px-xl-11">{{ pageconfig.tagline }}</h3>
-            <h2 class="fs-15 text-uppercase text-muted mb-12">{{ pageconfig.outro }}</h2>
+            <h2 class="fs-15 text-uppercase text-muted mb-12">See below for the specific {{ pageconfig.title }} domains we support</h2>
             <hr />
           </div>
           <!-- /column -->
