--- a/_layouts/technology.html
+++ b/_layouts/technology.html
@@ -22,7 +22,7 @@
         <!-- /.row -->
         {% assign loc = "right" %}
         {% for p in pageconfig.programmes %}
-        <a name="#{{ p[0] }}" style="visibility: hidden;"></a>
+        <a name="{{ p[0] }}" style="visibility: hidden;"></a>
         <div class="row gx-lg-8 gx-xl-12 gy-10 mb-14 mb-md-18 align-items-center">
           {% if loc == "right" %}
           <div class="col-lg-6 order-lg-2 position-relative">
