--- a/_layouts/technology.html
+++ b/_layouts/technology.html
@@ -21,7 +21,7 @@
         </div>
         <!-- /.row -->
         {% assign loc = "right" %}
-        {% for p in pageconfig.programmes %}
+        {% for p in pageconfig.services %}
         <a name="{{ p[0] }}" style="visibility: hidden;"></a>
         <div class="row gx-lg-8 gx-xl-12 gy-10 mb-14 mb-md-18 align-items-center">
           {% if loc == "right" %}
@@ -69,7 +69,6 @@
       <!-- /.container -->
     </section>
     <!-- /section -->
-    {% include solution-process.html %}
     {% include contact-form.html %}
 </div>
 <!-- /.content-wrapper -->
