--- a/_layouts/solution-2.html
+++ b/_layouts/solution-2.html
@@ -51,7 +51,7 @@
     <section class="wrapper bg-light wrapper-border">
         <div class="container py-14 py-md-12">
           <h2 class="display-4 mb-3 text-center">Why choose {{ site.data.content.config.name }} as your {{ pageconfig.title }} partner? &#129309;</h2>
-          <p class="lead text-center mb-10 px-md-16 px-lg-0">We leverage our experience in the industry to help you you both <span class="underline-3 style-2 yellow">navigate</span> <strong>and</strong> <span class="underline-3 style-2 blue">overcome</span> challenges <span class="underline-3 style-2 green">cost-effectively</span> 🎯</p>
+          <p class="lead text-center mb-10 px-md-16 px-lg-0">We leverage our experience in the industry to help you both <span class="underline-3 style-2 yellow">navigate</span> <strong>and</strong> <span class="underline-3 style-2 blue">overcome</span> challenges <span class="underline-3 style-2 green">cost-effectively</span> 🎯</p>
           <div class="row text-center">
             <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
               <h3 class="display-6 mb-9 px-xl-11">Clients often experience the following <span class="underline-3 style-2 red">problems</span>:</h3>
@@ -79,7 +79,7 @@
           <div class="row">
             <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2 text-center">
               <br /><br />
-              <h3 class="display-6 mb-9 px-xl-11">We're <span class="underline">our own clients</span> first, intimately familiar with <span class="underline-3 style-2 blue">idealised</span> goals and their respective <span class="underline-3 style-2 yellow">challenges</span> &#128161;</h3>
+              <h3 class="display-6 mb-9 px-xl-11">We're <span class="underline">our own clients</span> first, intimately familiar with how these <span class="underline-3 style-2 red">obstacles</span> can affect <span class="underline-3 style-2 blue">idealised</span> goals &#128161;</h3>
             </div>
             <div style="margin: 0 auto;" class="col-lg-9 mb-0">
               <div id="accordion-1" class="accordion-wrapper">
