--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
         <div class="col-md-4 col-lg-3">
           <div class="widget">
             <img class="mb-4" src="{{ site.url | append: site.nav_logo }}" srcset="{{ site.url | append: site.nav_logo2x }}" alt="" />
-            <p class="mb-4">© {{ site.time | date: "%Y" }}. All Rights Reserved.</p>
+            <p class="mb-4">© {{ site.time | date: "%Y" }}. All Rights Reserved.<br /><a href="/privacy-policy">> <u>AxOps&#8482; Privacy Policy</u></a></p>
             <nav class="nav social social-white">
               <a href="#"><i class="uil uil-linkedin"></i></a>
               <!-- <a href="#"><i class="uil uil-youtube"></i></a> -->
@@ -16,23 +16,23 @@
         <!-- /column -->
         <div class="col-md-4 col-lg-3">
           <div class="widget">
-            <h4 class="widget-title text-white mb-3">Get in Touch</h4>
-            <address class="pe-xl-15 pe-xxl-17"></address>
-            <a href="mailto:#">Contact us any time of day, any day, over at <strong>holler@axops.tech</strong>. Looking forward to hearing from you!</a>
+            <h4 class="widget-title text-white mb-3">What We Do</h4>
+            <ul class="list-unstyled  mb-0">
+              <li><a href="/our-solutions">Solutions</a></li>
+              <li><a href="/supported-technologies">Technologies</a></li>
+              <li><a href="/case-studies">Case Studies</a></li>
+            </ul>
           </div>
           <!-- /.widget -->
         </div>
         <!-- /column -->
         <div class="col-md-4 col-lg-3">
           <div class="widget">
-            <h4 class="widget-title text-white mb-3">Learn More</h4>
+            <h4 class="widget-title text-white mb-3">Who We Are</h4>
             <ul class="list-unstyled  mb-0">
               <li><a href="/our-vision">Our Vision</a></li>
               <li><a href="/meet-the-team">The Team</a></li>
-              <li><a href="/our-solutions">Solutions</a></li>
-              <li><a href="/supported-technologies">Technologies</a></li>
-              <li><a href="/case-studies">Case Studies</a></li>
-              <li><a href="/privacy-policy">Privacy Policy</a></li>
+              <li><a href="/our-partners">Our Partners</a></li>
             </ul>
           </div>
           <!-- /.widget -->
