--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
         <div class="col-md-4 col-lg-3">
           <div class="widget">
             <img class="mb-4" src="{{ site.url | append: site.nav_logo }}" srcset="{{ site.url | append: site.nav_logo2x }}" alt="" />
-            <p class="mb-4">© {{ site.time | date: "%Y" }}. All Rights Reserved.<br /><a href="/privacy-policy">> <u>AxOps&#8482; Privacy Policy</u></a></p>
+            <p class="mb-2">© {{ site.time | date: "%Y" }}. All Rights Reserved.<br /><a href="/privacy-policy">> <u>AxOps&#8482; Privacy Policy</u></a></p>
             <nav class="nav social social-white">
               <a href="#"><i class="uil uil-linkedin"></i></a>
               <!-- <a href="#"><i class="uil uil-youtube"></i></a> -->
@@ -30,9 +30,9 @@
           <div class="widget">
             <h4 class="widget-title text-white mb-3">Who We Are</h4>
             <ul class="list-unstyled  mb-0">
-              <li><a href="/our-vision">Our Vision</a></li>
-              <li><a href="/meet-the-team">The Team</a></li>
-              <li><a href="/our-partners">Our Partners</a></li>
+              <li><a href="/about-us/our-vision">Our Vision</a></li>
+              <li><a href="/about-us/meet-the-team">The Team</a></li>
+              <li><a href="/about-us/our-partners">Our Partners</a></li>
             </ul>
           </div>
           <!-- /.widget -->
@@ -41,8 +41,8 @@
         <div class="col-md-12 col-lg-3">
           <div class="widget">
             <h4 class="widget-title text-white mb-3">Contact Us</h4>
-            <p class="mb-5">Calle Juan Urbieta, 16, 1ºA, 28007, Madrid - Spain.</p>
-            <p class="mb-5"><strong>Email:</strong> <u><a href="">holler@axops.tech</a></u></p>
+            <p class="mb-2">Calle Juan Urbieta, 16, 1ºA, 28007, Madrid - Spain.</p>
+            <p class="mb-2"><strong>Email:</strong> <u><a href="mailto:holler@axops.tech">holler@axops.tech</a></u></p>
           </div>
           <!-- /.widget -->
         </div>
