added CookieBot scripts to header & footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -59,6 +59,11 @@
   </div>
   <script src="{{ site.url }}/assets/js/plugins.js"></script>
   <script src="{{ site.url }}/assets/js/theme.js"></script>
+
+  <!-- Begin: CookieBot Declaration Script -->
+  <script id="CookieDeclaration" src="https://consent.cookiebot.com/3f731cd7-57dc-4e2f-b612-24a4cbaf3c8d/cd.js" type="text/javascript" async></script>
+  <!-- End: CookieBot Declaration Script -->
+
 </body>
 
 </html>
