updated privacy/cookie policy creatives

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,12 +4,7 @@
         <div class="col-md-4 col-lg-3">
           <div class="widget">
             <img class="mb-4" src="{{ site.url | append: site.nav_logo }}" srcset="{{ site.url | append: site.nav_logo2x }}" alt="" />
-            <p class="mb-2">© {{ site.time | date: "%Y" }}. All Rights Reserved.<br /><a href="/privacy-policy">> <u>AxOps&#8482; Privacy Policy</u></a></p>
-            <nav class="nav social social-white">
-              <a href="#"><i class="uil uil-linkedin"></i></a>
-              <!-- <a href="#"><i class="uil uil-youtube"></i></a> -->
-            </nav>
-            <!-- /.social -->
+            <p class="mb-2">© {{ site.time | date: "%Y" }}. All Rights Reserved.<br /><a href="/privacy-policy">> <u>Privacy Policy</u></a><br /><a href="/cookie-policy">> <u>Cookie Policy</u></a></p>
           </div>
           <!-- /.widget -->
         </div>
@@ -43,6 +38,11 @@
             <h4 class="widget-title text-white mb-3">Contact Us</h4>
             <p class="mb-2">Calle Juan Urbieta, 16, 1ºA, 28007, Madrid - Spain.</p>
             <p class="mb-2"><strong>Email:</strong> <u><a href="mailto:holler@axops.tech">holler@axops.tech</a></u></p>
+            <nav class="nav social social-white">
+              <a href="#"><i class="uil uil-linkedin"></i></a>
+              <!-- <a href="#"><i class="uil uil-youtube"></i></a> -->
+            </nav>
+            <!-- /.social -->
           </div>
           <!-- /.widget -->
         </div>
@@ -61,7 +61,7 @@
   <script src="{{ site.url }}/assets/js/theme.js"></script>
 
   <!-- Begin: CookieBot Declaration Script -->
-  <script id="CookieDeclaration" src="https://consent.cookiebot.com/3f731cd7-57dc-4e2f-b612-24a4cbaf3c8d/cd.js" type="text/javascript" async></script>
+  <!-- <script id="CookieDeclaration" src="https://consent.cookiebot.com/3f731cd7-57dc-4e2f-b612-24a4cbaf3c8d/cd.js" type="text/javascript" async></script> -->
   <!-- End: CookieBot Declaration Script -->
 
 </body>
